--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -2,7 +2,6 @@
 
 .text {
     font-family: Inter, sans-serif;
-    white-space: pre-wrap;
     display: inline-block;
     word-break: break-word;
     overflow-wrap: anywhere;
